# palabra-ai-python

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: .release_timestamp
.github/workflows/: ci.yml  release.yml  test.yml
docs/: installation.md
examples/: file_to_file.py  get_result.py  mic_to_speakers.py  multi_language.py  realtime_stt.py  realtime_tts.py  streaming.py  sts_buffer_streaming.py  sts_file_to_file.py  sts_mic_to_speakers.py  sts_multi_language.py
examples/file2file/: file2file_ws.py
examples/nanopalabra/: nanopalabra_ws.py
src/palabra_ai/: __init__.py  audio.py  client.py  config.py  constant.py  events.py  exc.py  lang.py  message.py  model.py  stt.py  task.py  tts.py
src/palabra_ai/adapter/: device.py  file.py  realtime_mixed.py  realtime_webrtc.py  realtime_websocket.py
src/palabra_ai/base/: adapter.py  audio_frame.py  realtime_adapter.py
src/palabra_ai/benchmark/: __main__.py  analyzer.py  report.py  reporter.py  rewind.py  runner.py  utils.py
src/palabra_ai/internal/: audio.py  buffer.py  rest.py
src/palabra_ai/task/: logger.py  manager.py  realtime.py  receiver.py  sender.py  transcription.py
src/palabra_ai/util/: dt.py  fileio.py  logger.py  (+3 more)
tests/: test_audio.py  test_benchmark.py  test_benchmark_runner.py  test_client.py  test_config.py  test_constant.py  test_internal_audio.py  test_internal_rest.py  test_lang.py  test_message.py  test_model.py  test_other_internal_audio_extra.py  test_stream_session.py  test_sts_session.py  test_stt_session.py  test_task_adapter_base.py  test_task_adapter_buffer.py  test_task_adapter_device.py  test_task_adapter_dummy.py  test_task_adapter_file.py  test_task_adapter_file_integration.py  test_task_io_base.py  test_task_io_webrtc.py  test_task_io_ws.py  test_task_logger.py  test_task_manager.py  test_task_transcription.py  test_tts_session.py  test_util_aio.py  test_util_fanout_queue.py  test_util_logger.py
(+8 files in other folders)
